# 100-days-python

./: README.md  pyproject.toml
15way_rps/: game.py  models.py  result_matrix.py  rps.py
d21/: friends.py  scrabble.py
d22/: decorators.py  test_decorators.py
dnd_game/: actors.py  main.py
exp_gen/: d17.ipynb  d17.py  d18.ipynb  d18.py
pomodoro/: timer.py
pytesting/: groceries.py
rps/: game.py  models.py  result_matrix.py
states/: states.py
stats/: shootings.py
tests/: test_groceries.py  test_states.py
top/: directors.py
traffic-light/: __main__.py
