[tool.poetry]
name = "100-days-python"
version = "0.1.0"
description = "Exercising some Python muscle"
authors = ["Lucas Araujo <luribeiro@schubergphilis.com>"]

[tool.poetry.dependencies]
python = "^3.9"
beepy = "^1.0.7"
pytest = "^6.2.3"
pytest-cov = "^2.11.1"
jupyter = "^1.0.0"

[tool.poetry.dev-dependencies]
ipython = "^7.22.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
